[package]
name = "prime-math"
version = "0.1.0"
authors = ["Nym Seddon <unseddd@shh.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = { version = "0.3", default-features = false, features = ["alloc", "num-bigint"] }
rand = "0.7"
